# src/domain/order.js
@@ -13,6 +13,7 @@ const { ErrorModel } = require('../models');
 const { ERROR, ROUTE, LOGS } = require('../constants');
 const { Utils } = require('../libs/utils');
 const moment = require('moment');
+const paypal = require('paypal-rest-sdk');
 const defaultOpts = {};
 class OrderService {
   /**
@@ -106,5 +107,63 @@ class OrderService {
     const output = await this.repo.updateOrder(msg);
     return output;
   }
+  async createPayment(data) {
+    const create_payment_json = {
+      intent: 'sale',
+      payer: {
+        payment_method: 'paypal',
+      },
+      redirect_urls: {
+        return_url: 'http://localhost:3000/success',
+        cancel_url: 'http://localhost:3000/cancel',
+      },
+      transactions: [
+        {
+          item_list: {
+            items: [
+              {
+                name: 'Redhock Bar Soap',
+                sku: '001',
+                price: '25.00',
+                currency: 'USD',
+                quantity: 1,
+              },
+            ],
+          },
+          amount: {
+            currency: 'USD',
+            total: '25.00',
+          },
+          description: 'Washing Bar soap',
+        },
+      ],
+    };
+    let link;
+    //await this.payment(paypal.payment.error, paypal.payment)
+    paypal.payment.create(create_payment_json, function (error, payment) {
+      if (error) {
+        throw error;
+      } else {
+        for (let i = 0; i < payment.links.length; i++) {
+          if (payment.links[i].rel === 'approval_url') {
+            link = payment.links[i].href;
+            console.log(link);
+          }
+        }
+      }
+    });
+    //return link;
+  }
+  // async payment(error, payment) {
+  //   if (error) {
+  //     throw error;
+  //   } else {
+  //     for (let i = 0; i < payment.links.length; i++) {
+  //       if (payment.links[i].rel === 'approval_url') {
+  //         return payment.links[i].href;
+  //       }
+  //     }
+  //   }
+  // }
 }
 module.exports = OrderService;
